chore: fix api documentation of user enrolled courses
